[gd_scene load_steps=6 format=2]

[ext_resource path="res://Launchpad.gd" type="Script" id=1]
[ext_resource path="res://Particles/rocket_exhaust.svg" type="Texture" id=2]
[ext_resource path="res://Sounds/100772__cgeffex__huge-rocket-launcher.wav" type="AudioStream" id=3]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0.00165014, 0.607422 ), 0.0, 0.542637, 0, 0, Vector2( 1, 1 ), 1.4, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.587692, 1 )
colors = PoolColorArray( 0.496094, 0.487404, 0.468964, 0.883961, 0.698395, 0.785913, 0.898438, 0.508314, 0.44982, 0.68211, 0.980769, 0 )

[node name="Launchpad" type="Node2D"]
script = ExtResource( 1 )

[node name="Outlet" type="Position2D" parent="."]
position = Vector2( 0, -80 )

[node name="Look" type="Polygon2D" parent="."]
z_index = 1
z_as_relative = false
color = Color( 1, 0.701961, 0, 1 )
antialiased = true
polygon = PoolVector2Array( 40, -80, 30, -90, 30, -120, -30, -120, -30, -90, -40, -80, -40, -70, -30, -60, -30, -40, -50, -30, -60, 0, -50, 0, -40, -20, -30, -20, -30, 0, 30, 0, 30, -20, 40, -20, 50, 0, 60, 0, 50, -30, 30, -40, 30, -60, 40, -70 )

[node name="Interval" type="Timer" parent="."]
wait_time = 3.3

[node name="DustR" type="CPUParticles2D" parent="."]
position = Vector2( 0, -20 )
z_index = -1
emitting = false
amount = 26
lifetime = 3.0
speed_scale = 2.5
local_coords = false
texture = ExtResource( 2 )
spread = 30.0
flatness = 0.5
gravity = Vector2( 0, 0 )
initial_velocity = 180.0
linear_accel = -90.0
scale_amount = 4.0
scale_amount_random = 0.4
scale_amount_curve = SubResource( 1 )
color_ramp = SubResource( 2 )

[node name="DustL" type="CPUParticles2D" parent="."]
position = Vector2( 0, -20 )
rotation = 3.14159
z_index = -1
emitting = false
amount = 26
lifetime = 3.0
speed_scale = 2.5
local_coords = false
texture = ExtResource( 2 )
spread = 30.0
flatness = 0.5
gravity = Vector2( 0, 0 )
initial_velocity = 180.0
linear_accel = -90.0
scale_amount = 4.0
scale_amount_random = 0.4
scale_amount_curve = SubResource( 1 )
color_ramp = SubResource( 2 )

[node name="Launch" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -4.0

[connection signal="timeout" from="Interval" to="." method="_on_Interval_timeout"]
